--- a/src/app/(WithHeaderAndFooter)/mobileAppDevelopment/mobileAppDevelopment.module.scss
+++ b/src/app/(WithHeaderAndFooter)/mobileAppDevelopment/mobileAppDevelopment.module.scss
@@ -114,3 +114,144 @@
         border-right: none;
     }
 }
+
+
+.services {
+    padding: 0px 0px 60px 0px;
+
+    .heading {
+        font-size: 40px;
+        font-weight: 600;
+        color: #1a1a1a;
+        margin-bottom: 10px;
+    }
+
+    .para {
+        font-size: 18px;
+        font-weight: 400;
+        color: #797979;
+        margin-bottom: 50px;
+    }
+
+    .main_contents {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 15px;
+        background-color: #fff;
+        box-shadow: 0 1px 15px 1px rgba(0, 0, 0, .04), 0 1px 6px rgba(0, 0, 0, .04);
+        padding: 25px;
+        flex-wrap: wrap;
+        margin-bottom: 20px;
+
+        .image {
+            width: 60px;
+            height: 60px;
+            position: relative;
+            flex: 1;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .main {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            flex: 8;
+
+            .head {
+                font-size: 20px;
+                font-weight: 500;
+                color: #1a1a1a;
+                margin-bottom: 0;
+            }
+
+            .para {
+                font-size: 16px;
+                font-weight: 400;
+                color: #797979;
+                margin-bottom: 0px;
+            }
+        }
+    }
+}
+
+
+.choose {
+    padding: 0px 0px 60px 0px;
+
+    .heading {
+        font-size: 40px;
+        font-weight: 600;
+        color: #1a1a1a;
+        margin-bottom: 50px;
+    }
+
+    .border_right {
+        border-right: 1px solid #cdcdcd;
+    }
+
+    .border_bottom {
+        border-bottom: 1px solid #cdcdcd;
+    }
+
+    .border {
+        border-left: 1px solid #cdcdcd;
+        border-right: 1px solid #cdcdcd;
+    }
+
+    .box {
+        display: flex;
+        flex-direction: column;
+        padding: 15px 15px 20px 15px;
+
+        .head {
+            font-size: 22px;
+            font-weight: 600;
+            color: #2E5490;
+            margin-bottom: 12px;
+        }
+
+        .para {
+            font-size: 16px;
+            font-weight: 400;
+            color: #797979;
+            margin-bottom: 0px;
+        }
+    }
+
+}
+
+
+.form {
+    border-top: 1px solid #dadada;
+    border-bottom: 1px solid #dadada;
+    padding: 60px 0px;
+    margin-bottom: 60px;
+
+    .form_head {
+        font-size: 40px;
+        font-weight: 600;
+        color: #1a1a1a;
+        margin-bottom: 20px;
+    }
+
+    .form_para {
+        font-size: 18px;
+        font-weight: 400;
+        color: #666666;
+        margin-bottom: 40px;
+    }
+
+    .btn1 {
+        background-color: #2E5490;
+        color: #fff;
+        font-size: 18px;
+        font-weight: 600;
+        border: 1px solid #2E5490;
+        padding: 12px 50px;
+    }
+}
