--- a/src/app/(WithHeaderAndFooter)/ecommerce/ecommerce.module.scss
+++ b/src/app/(WithHeaderAndFooter)/ecommerce/ecommerce.module.scss
@@ -60,8 +60,10 @@
 }
 
 
+
 .features {
-    padding-bottom: 60px;
+    padding: 60px 0px;
+    background-color: #f2f2f2;
 
     .head {
         font-size: 40px;
@@ -75,5 +77,187 @@
         font-weight: 400;
         color: #666666;
         margin-bottom: 40px;
+    }
+
+    .box_Content {
+        background-color: #fff;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        padding: 25px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        height: 285px;
+
+        .circle {
+            background-color: #2E5490;
+            width: 55px;
+            height: 55px;
+            border-radius: 50%;
+            margin-bottom: 25px;
+
+            .image {
+                width: 30px;
+                height: 30px;
+                position: relative;
+                top: 12px;
+                margin: 0px auto;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+
+        .head {
+            font-size: 20px;
+            font-weight: 500;
+            color: #1a1a1a;
+            margin-bottom: 10px;
+        }
+
+        .para {
+            font-size: 16px;
+            font-weight: 400;
+            color: #797979;
+            margin-bottom: 0px;
+        }
+    }
+}
+
+
+.services {
+    padding: 60px 0px 60px 0px;
+
+    .heading {
+        font-size: 40px;
+        font-weight: 600;
+        color: #1a1a1a;
+        margin-bottom: 50px;
+    }
+
+    .border_right {
+        border-right: 1px solid #cdcdcd;
+    }
+
+    .border_bottom {
+        border-bottom: 1px solid #cdcdcd;
+    }
+
+    .border {
+        border-left: 1px solid #cdcdcd;
+        border-right: 1px solid #cdcdcd;
+    }
+
+    .box {
+        display: flex;
+        flex-direction: column;
+        padding: 15px 15px 20px 15px;
+
+        .head {
+            font-size: 22px;
+            font-weight: 600;
+            color: #2E5490;
+            margin-bottom: 12px;
+        }
+
+        .para {
+            font-size: 16px;
+            font-weight: 400;
+            color: #797979;
+            margin-bottom: 0px;
+        }
+    }
+
+}
+
+
+.choose {
+    padding: 60px 0px 60px 0px;
+    background-color: #f2f2f2;
+
+    .heading {
+        font-size: 40px;
+        font-weight: 600;
+        color: #1a1a1a;
+        margin-bottom: 50px;
+    }
+
+    .box {
+        background-color: #fff;
+        box-shadow: 0 0 10px 3px rgba(0, 0, 0, .08);
+        padding: 30px 0px 0px;
+        height: 85px;
+        cursor: pointer;
+        text-align: center;
+        margin-bottom: 30px;
+
+        .first {
+            height: 55px;
+            transition: height 1s ease-in-out;
+
+            .head {
+                color: #2E5490;
+                font-size: 22px;
+                font-weight: 600;
+                margin-bottom: 0;
+                transition: .3s;
+            }
+        }
+
+        .desp {
+            opacity: 0;
+            visibility: hidden;
+
+            .para {
+                color: #797979;
+                font-size: 16px;
+                font-weight: 400;
+                margin-bottom: 0px;
+            }
+        }
+
+    }
+
+    .box:hover {
+        height: 200px;
+        transition: all 1s ease-in-out;
+        padding: 20px 30px 0px 30px;
+
+        .desp {
+            opacity: 1;
+            transition: all 1s ease-in-out;
+            visibility: visible;
+        }
+    }
+}
+
+
+.form {
+    border-top: 1px solid #dadada;
+    border-bottom: 1px solid #dadada;
+    padding: 60px 0px;
+    margin: 60px 0px;
+
+    .form_head {
+        font-size: 40px;
+        font-weight: 600;
+        color: #1a1a1a;
+        margin-bottom: 20px;
+    }
+
+    .form_para {
+        font-size: 18px;
+        font-weight: 400;
+        color: #666666;
+        margin-bottom: 40px;
+    }
+
+    .btn1 {
+        background-color: #2E5490;
+        color: #fff;
+        font-size: 18px;
+        font-weight: 600;
+        border: 1px solid #2E5490;
+        padding: 12px 50px;
     }
 }
