--- a/src/components/AppSolution/AppSolution.module.scss
+++ b/src/components/AppSolution/AppSolution.module.scss
@@ -24,7 +24,7 @@
         align-items: center;
         flex-wrap: wrap;
         gap: 20px;
-        background-color: #0c111a21;
+        background-color: #f2f2f2;
         padding: 30px;
         margin-bottom: 30px;
 
